# xgen-orchestrator

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
agent/: Makefile  go.mod
agent/cmd/xgen-agent/: main.go
bundles/: build.sh
bundles/sample/: install.sh  manifest.json  status.sh  uninstall.sh
bundles/sample-cluster/: manifest.json
bundles/xgen-infra-compose/: install.sh  manifest.json  sources.txt  status.sh  uninstall.sh
bundles/xgen-k3s/: install.sh  manifest.json  sources.txt  status.sh  uninstall.sh
cli/: go.mod  main.go
control-plane/: Dockerfile  pyproject.toml
control-plane/src/xgen_orchestrator/: auth.py  bundlesign.py  clusters.py  config.py  main.py  pb.py  storage.py
control-plane/src/xgen_orchestrator/db/: models.py  session.py
control-plane/src/xgen_orchestrator/enrollment/: ca.py
control-plane/src/xgen_orchestrator/grpc/: hub.py  server.py
control-plane/src/xgen_orchestrator/http/: app.py
control-plane/src/xgen_orchestrator/http/static/: index.html
control-plane/tests/: test_enroll.py  test_jobs.py  test_operator.py
deploy/: .env.example  docker-compose.yml
docs/design/: 00-overview.md  01-repo-structure.md  02-enrollment-security.md  03-grpc-protocol.md  04-data-model.md  05-job-orchestration.md  06-catalog-bundles.md  07-operator-surface.md  08-llm-agentic-layer.md  09-design-review.md  10-review-resolutions.md  11-cluster-topology.md  12-operational-policies.md  13-threat-model.md  14-future-and-residuals.md  15-real-infra-packaging.md  README.md
proto/: buf.gen.yaml  buf.yaml
scripts/: install.sh
(+24 files in other folders)
