[project]
name = "xgen-orchestrator-control-plane"
version = "0.0.1"
description = "xgen-orchestrator Control Plane (FastAPI + grpcio)"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "grpcio",
    "protobuf>=7.35.1",  # 생성 코드(buf gencode)와 런타임 정합. grpcio-tools는 codegen=buf라 불요.
    "sqlalchemy>=2.0",
    "psycopg[binary]",
    "alembic",
    "pydantic>=2",
    "cryptography",          # CSR 서명(내부 CA), 시크릿 app-level 암호화
    "minio",                 # 번들 저장/프록시
    "python-jose[cryptography]",  # 운영자 JWT
]

[project.optional-dependencies]
test = ["pytest", "httpx"]  # httpx: FastAPI TestClient

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
